--- a/EyeSpeak/Features/Keyboard/KeyboardGroupCollectionViewCell.xib
+++ b/EyeSpeak/Features/Keyboard/KeyboardGroupCollectionViewCell.xib
@@ -17,7 +17,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="524" height="366"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="4GU-Nq-tRW">
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="4GU-Nq-tRW">
                         <rect key="frame" x="20" y="20" width="484" height="326"/>
                         <color key="backgroundColor" name="CategoryBackground"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="5j1-jy-NSV">
