--- a/EyeSpeak/Features/Presets/SuggestionCollectionViewCell.xib
+++ b/EyeSpeak/Features/Presets/SuggestionCollectionViewCell.xib
@@ -9,14 +9,14 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Hx1-bE-gyH" customClass="TextFieldCollectionViewCell" customModule="EyeSpeak" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="68I-nF-52u" customClass="SuggestionCollectionViewCell" customModule="EyeSpeak" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="269" height="218"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="269" height="218"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="headTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.80000000000000004" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lJv-EU-CHR">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="headTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xw3-F9-Tcu">
                         <rect key="frame" x="16" y="44" width="237" height="174"/>
                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                         <nil key="textColor"/>
@@ -25,15 +25,15 @@
                 </subviews>
             </view>
             <constraints>
-                <constraint firstAttribute="trailingMargin" secondItem="lJv-EU-CHR" secondAttribute="trailing" id="2Od-3X-vhV"/>
-                <constraint firstItem="lJv-EU-CHR" firstAttribute="leading" secondItem="Hx1-bE-gyH" secondAttribute="leadingMargin" id="Arf-q9-3bk"/>
-                <constraint firstAttribute="bottomMargin" secondItem="lJv-EU-CHR" secondAttribute="bottom" id="V7M-sO-ZVn"/>
-                <constraint firstItem="lJv-EU-CHR" firstAttribute="top" secondItem="Hx1-bE-gyH" secondAttribute="topMargin" id="ubO-Um-0OQ"/>
+                <constraint firstItem="Xw3-F9-Tcu" firstAttribute="top" secondItem="68I-nF-52u" secondAttribute="topMargin" id="3ng-Jo-g5o"/>
+                <constraint firstItem="Xw3-F9-Tcu" firstAttribute="leading" secondItem="68I-nF-52u" secondAttribute="leadingMargin" id="Ulx-2s-r8x"/>
+                <constraint firstAttribute="trailingMargin" secondItem="Xw3-F9-Tcu" secondAttribute="trailing" id="Vf3-mh-gJF"/>
+                <constraint firstAttribute="bottomMargin" secondItem="Xw3-F9-Tcu" secondAttribute="bottom" id="idJ-Gm-hjy"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="uZY-cu-gmD"/>
+            <viewLayoutGuide key="safeArea" id="D7E-j1-yxg"/>
             <size key="customSize" width="269" height="218"/>
             <connections>
-                <outlet property="textLabel" destination="lJv-EU-CHR" id="pgU-hk-nhd"/>
+                <outlet property="textLabel" destination="Xw3-F9-Tcu" id="BpZ-a6-CAd"/>
             </connections>
             <point key="canvasLocation" x="296.37681159420293" y="190.17857142857142"/>
         </collectionViewCell>
