--- a/EyeSpeak/Features/Presets/Pagination/Containers/PresetPaginationContainerCollectionViewCell.xib
+++ b/EyeSpeak/Features/Presets/Pagination/Containers/PresetPaginationContainerCollectionViewCell.xib
@@ -16,6 +16,7 @@
             <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="ldk-6n-dPb">
                 <rect key="frame" x="0.0" y="0.0" width="524" height="366"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
             </collectionViewCellContentView>
             <color key="backgroundColor" name="Background"/>
             <size key="customSize" width="524" height="366"/>
