--- a/EyeSpeak/Features/Keyboard/KeyboardKeyCollectionViewCell.xib
+++ b/EyeSpeak/Features/Keyboard/KeyboardKeyCollectionViewCell.xib
@@ -15,11 +15,17 @@
                 <rect key="frame" x="0.0" y="0.0" width="269" height="218"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="57z-XF-Jde">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="28" translatesAutoresizingMaskIntoConstraints="NO" id="57z-XF-Jde">
                         <rect key="frame" x="16" y="0.0" width="237" height="218"/>
-                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="48"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
+                        <variation key="widthClass=compact">
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
+                        </variation>
+                        <variation key="heightClass=compact-widthClass=regular">
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
+                        </variation>
                     </label>
                 </subviews>
             </view>
