Revert "Feature/gazeable alert"

--- a/EyeSpeak/Features/Settings/Settings.storyboard
+++ b/EyeSpeak/Features/Settings/Settings.storyboard
@@ -76,7 +76,7 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                                 <color key="tintColor" name="DefaultFontColor"/>
-                                <state key="normal" image="gear" catalog="system">
+                                <state key="normal">
                                     <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="34" weight="bold"/>
                                 </state>
                                 <userDefinedRuntimeAttributes>
@@ -112,7 +112,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="gear" catalog="system" width="64" height="58"/>
         <image name="xmark.circle" catalog="system" width="64" height="60"/>
         <namedColor name="Background">
             <color red="0.12800000607967377" green="0.10899999737739563" blue="0.3580000102519989" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
