--- a/EyeSpeak/Features/Presets/PresetItemCollectionViewCell.xib
+++ b/EyeSpeak/Features/Presets/PresetItemCollectionViewCell.xib
@@ -18,9 +18,15 @@
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qn0-yK-CCv">
                         <rect key="frame" x="16" y="44" width="237" height="174"/>
-                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
+                        <variation key="heightClass=compact">
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                        </variation>
                     </label>
                 </subviews>
             </view>
